# nexus

./: local_test.py  main.py  nexus_server.py  pyproject.toml  start_local_worker.sh
manager/: autonomous_agent.py  manager_core.py  memory_manager.py  researcher.py
manager/vector_store/: chroma.sqlite3
scratch/: check_db.py
shared/: candidate_tools.json  config_loader.py  database.db  manifest.json
static/: app.js  index.html  style.css
temp_tools/borsa-mcp/: .dockerignore  .gitignore  Dockerfile  README.md  array_format_optimizer.py  asgi_app.py  borsa_client.py  borsa_mcp_server.py  check_mcp_tools_count.py  compact_json_optimizer.py  database.py  fly.toml  fon_mevzuat_kisa.md  fon_mevzuat_kisa.py  fon_mevzuat_uzun.md  pyproject.toml  requirements.txt  token_optimizer.py  unified_mcp_server.py  verify_tier2_data.py
temp_tools/borsa-mcp/models/: __init__.py  base.py  btcturk_models.py  buffett_models.py  calendar_models.py  coinbase_models.py  comprehensive_analysis_models.py  dovizcom_models.py  financial_ratios_models.py  kap_models.py  mynet_models.py  regulation_models.py  scanner_models.py  tcmb_models.py  tefas_models.py  unified_base.py  yfinance_models.py
temp_tools/borsa-mcp/providers/: borsapy_bond_provider.py  borsapy_calendar_provider.py  borsapy_fx_provider.py  borsapy_provider.py  borsapy_scanner_provider.py  btcturk_provider.py  buffett_analyzer_provider.py  coinbase_provider.py  dovizcom_auth.py  dovizcom_legacy_provider.py  financial_ratios_provider.py  isyatirim_provider.py  kap_provider.py  market_router.py  mynet_provider.py  tcmb_provider.py  tefas_provider.py  worldbank_provider.py  yfinance_provider.py  yfscreen_provider.py
temp_tools/financial-datasets-mcp/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  server.py
temp_tools/kospi-kosdaq-stock-server/: .gitignore  Dockerfile  LICENSE  README.md  README_LEGACY.md  docker-compose.yml  kospi_kosdaq_stock_server.py  krx_data_client.py  pyproject.toml  requirements.txt  smithery.yaml
temp_tools/mcp-chrome/app/chrome-extension/_locales/ko/: messages.json
temp_tools/mcp-chrome/app/chrome-extension/_locales/zh_TW/: messages.json
temp_tools/mcp-chrome/docs/: TOOLS_zh.md
temp_tools/reddit-mcp-buddy/: .env.example  .gitignore  .mcpignore  CONTRIBUTING.md  Dockerfile  LICENSE  bundle.config.json  deploy-server.sh  glama.json  manifest.json  package-lock.json  package.json  server.json  tsconfig.json
temp_tools/reddit-mcp-buddy/.github/: CODEOWNERS
temp_tools/reddit-mcp-buddy/.github/workflows/: publish-mcp.yml  test-publish.yml  tests.yml
temp_tools/reddit-mcp-buddy/docs/: mcpb-distribution-plan.md
temp_tools/reddit-mcp-buddy/scripts/: .env.example  .gitignore  README.md  build-mcpb.sh  rate-limit-tester.cjs
temp_tools/reddit-mcp-buddy/src/: cli.ts  index.ts  mcp-server.ts
temp_tools/reddit-mcp-buddy/src/core/: auth.ts  cache.ts  rate-limiter.ts
temp_tools/reddit-mcp-buddy/src/services/: content-processor.ts  reddit-api.ts
temp_tools/reddit-mcp-buddy/src/tools/: index.ts
temp_tools/reddit-mcp-buddy/src/types/: mcp.types.ts  reddit.types.ts
temp_tools/reddit-mcp-buddy/tests/: test-integration.sh  test-unit.sh
tmp/: kis_v2.py  main.py  make_korea_db.py  stock_code.json  summarizer.py  trading_mcp.py  youtube_extractor.py
worker/: worker_api.py
worker/skills/: borsa-mcp.py  financial_datasets_mcp.py  kospi_kosdaq_stock_server.py  market_flow.py  market_flow.py.bak  maverick_mcp.py  mcp_chrome.py  nexus_architect.py  reddit_mcp_buddy.py  trading_analyzer.py  tradingview_mcp.py  web_researcher.py  youtube_summarizer.py
