[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "borsa-mcp"
version = "0.8.0"
description = "Unified MCP Server for BIST, US stocks, crypto, funds, and FX data. 22 consolidated tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.14.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "pdfplumber>=0.11.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.0",
    "yfinance>=0.2.37",
    "pandas>=2.0.0",
    "markitdown>=0.1.1",
    "openpyxl>=3.1.5",
    "requests>=2.31.0",
    "borsapy>=0.8.4",
    "yfscreen>=0.1.1",
]

[project.scripts]
borsa-mcp = "unified_mcp_server:main"
borsa-mcp-legacy = "borsa_mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["providers*", "models*"]

[tool.setuptools]
py-modules = ["unified_mcp_server", "borsa_mcp_server", "borsa_client", "borsa_models", "fon_mevzuat_kisa", "token_optimizer", "compact_json_optimizer", "array_format_optimizer"]
include-package-data = true
