[project]
name = "kospi-kosdaq-stock-server"
version = "0.4.0"
description = "KOSPI/KOSDAQ Stock Data MCP Server with KRX Data Marketplace integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "mcp>=0.1.0",
    "playwright>=1.40.0",
    "nest-asyncio>=1.5.0",
    "holidays>=0.40",
]

authors = [
    {name = "Sangrok Mun", email = "munsangrok@gmail.com"},
]
license = {text = "MIT"}
keywords = ["mcp", "stock", "kospi", "kosdaq", "krx", "korea", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.urls]
Homepage = "https://github.com/dragon1086/kospi-kosdaq-stock-server"
Repository = "https://github.com/dragon1086/kospi-kosdaq-stock-server"
Issues = "https://github.com/dragon1086/kospi-kosdaq-stock-server/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
legacy = [
    "pykrx>=1.0.0",
]

[project.scripts]
kospi_kosdaq_stock_server = "kospi_kosdaq_stock_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
